////////////////////////////////////////////////////
// 🧍 USER
////////////////////////////////////////////////////
Table User {
  _id ObjectId [pk]
  username string
  password string
  email string
  phone string
  fullName string
  avatar string
  gender string
  dateOfBirth date
  role string
  isVerified boolean
  verifyToken string
  resetToken string
  resetTokenExpiry datetime
  lastLogin datetime
  isActive boolean
  address string
  joinedAt datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 💰 WALLET
////////////////////////////////////////////////////
Table Wallet {
  _id ObjectId [pk]
  userId ObjectId
  refCode string
  walletName string
  walletType string
  balance double
  totalDeposit double
  totalWithdraw double
  withdrawLimit double
  depositLimit double

  bankAccount_holderName string
  bankAccount_number string
  bankAccount_bankCode string
  bankAccount_napasCode string
  bankAccount_bankName string

  status string
  pinCode string
  isLinkedBank boolean
  activatedAt datetime
  lastUpdated datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 💳 TRANSACTION
////////////////////////////////////////////////////
Table Transaction {
  _id ObjectId [pk]
  walletId ObjectId
  userId ObjectId
  code string
  refCode string
  type string
  direction string
  category string
  amount double
  fee double
  balanceBefore double
  balanceAfter double
  description string
  status string
  deviceInfo string
  date datetime
  confirmedAt datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 👥 TEAM
////////////////////////////////////////////////////
Table Team {
  _id ObjectId [pk]
  name string
  description string
  avatar string
  refCode string
  createdBy ObjectId
  membersCount int
  walletId ObjectId
  privacy string
  status string
  totalExpense double
  lastActivity datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 🧩 MEMBER
////////////////////////////////////////////////////
Table Member {
  _id ObjectId [pk]
  userId ObjectId
  teamId ObjectId
  name string
  email string
  avatar string
  role string
  status string
  joinedAt datetime
  leftAt datetime
  contribution double
  balance double
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 💸 EXPENSE
////////////////////////////////////////////////////
Table Expense {
  _id ObjectId [pk]
  teamId ObjectId
  createdBy ObjectId
  title string
  amount double
  category string
  description string
  status string
  paidBy ObjectId
  splitMethod string
  date datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 🔢 SPLIT
////////////////////////////////////////////////////
Table Split {
  _id ObjectId [pk]
  expenseId ObjectId
  teamId ObjectId
  total double
  method string
  currency string
  date datetime
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 👤 SPLIT MEMBER
////////////////////////////////////////////////////
Table SplitMember {
  _id ObjectId [pk]
  splitId ObjectId
  memberId ObjectId
  name string
  paid double
  owed double
  balance double
  createdAt datetime
  updatedAt datetime
}

////////////////////////////////////////////////////
// 🔗 RELATIONSHIPS (STANDARDIZED)
////////////////////////////////////////////////////
Ref: Wallet.userId > User._id                      // 1 user → 1 wallet
Ref: Transaction.walletId > Wallet._id             // 1 wallet → many transactions
Ref: Transaction.userId > User._id                 // 1 user → many transactions
Ref: Team.createdBy > User._id                     // 1 user → many teams created
Ref: Team.walletId > Wallet._id                    // 1 wallet → 1 team (shared fund)
Ref: Member.userId > User._id                      // 1 user → many member roles
Ref: Member.teamId > Team._id                      // 1 team → many members
Ref: Expense.teamId > Team._id                     // 1 team → many expenses
Ref: Expense.createdBy > User._id                  // 1 user → many created expenses
Ref: Expense.paidBy > Member._id                   // 1 member → many paid expenses
Ref: Split.expenseId > Expense._id                 // 1 expense → 1 split rule
Ref: Split.teamId > Team._id                       // 1 team → many splits
Ref: SplitMember.splitId > Split._id               // 1 split → many split members
Ref: SplitMember.memberId > Member._id             // 1 member → many split entries
